# pi-extensions

./: .gitignore  README.md  pyproject.toml
configs/nanowakeword/: hola_roger_gru.json  hola_roger_gru.yaml  hola_roger_lstm.json  hola_roger_lstm.yaml  hola_roger_tcn.json  hola_roger_tcn.yaml
docs/: benchmark-results.md  setup.md  speech-backend-spikes.md  wake-nanowakeword-spike.md
extensions/pi-router/: README.md  index.ts  package-lock.json  package.json
research/: local-context.md  nanowakeword.md  stt.md  tts.md  vad.md
scripts/nanowakeword/: download_assets.py  generate_configs.py  setup_env.sh  (+4 more)
tests/: test_backend_factories.py  test_backends.py  test_cancellation.py  test_cli.py  test_cli_daemon.py  test_cli_installer.py  test_cli_listen_once.py  test_cli_overlay_demo.py  test_cli_say.py  test_cli_task.py  test_config.py  test_cuda_env.py  test_daemon.py  test_daemon_errors.py  test_dialogue_control.py  test_feedback.py  test_installer.py  test_layer_shell_process_overlay.py  test_manual_loop.py  test_model_availability.py  test_nanowakeword_live_listener.py  test_nanowakeword_record_real_samples.py  test_nanowakeword_training_configs.py  test_overlay_feedback.py  test_overlay_state.py  test_pi_router_extension_structure.py  test_pi_rpc_client.py  test_pi_runner.py  test_pi_sessions.py  test_real_backend_adapters.py  test_routing.py  test_speech_benchmarks.py  test_system_feedback.py  test_task_log.py  test_tts_speaker.py  test_ui_and_summary.py  test_voice_loop.py  test_voice_loop_dialogue.py  test_voice_loop_feedback.py  test_voice_loop_no_input.py  (+2 more)
(+121 files in other folders)
